--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 3870d10
-	trimbase = 
+	trim = dynamixel_sdk
+	base = 59a6ab9
+	trimbase = 3870d10
 	parent = upstream
 	previous = 67dfc75
