--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 59a6ab9
+	base = e139ab0
 	trimbase = 
 	parent = release/dashing/dynamixel_sdk
-	previous = 
+	previous = 59a6ab9
