--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2f170e6
+	base = e5e93df
 	trimbase = 
 	parent = debian/dashing/dynamixel_sdk
-	previous = 
+	previous = 2f170e6
