--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = dynamixel_sdk
-	base = 53b1023
-	trimbase = 
+	base = 084e41e
+	trimbase = 53b1023
 	parent = upstream
 	previous = 5f9e006
