--- a/.travis.yml
+++ b/.travis.yml
@@ -2,25 +2,28 @@ services:
   - docker
 
 language:
-  - none
+  - generic
 
 notifications:
   email:
     on_success: change
     on_failure: always
     recipients:
-      - pyo@robotis.com
-      - thlim@robotis.com
+      - willson@robotis.com
 
 branches:
   only:
     - ros2
     - ros2-devel
     - dashing-devel
+    - eloquent-devel
+    - foxy-devel
 
 install:
-  - git clone --quiet --depth 1 https://github.com/robotpilot/ros2ci.git .ros2ci
+  - git clone --quiet --depth 1 https://github.com/ROBOTIS-GIT/ros2ci.git .ros2ci
 
 matrix:
   include:
     - script: .ros2ci/travis.bash dashing
+    - script: .ros2ci/travis.bash eloquent
+    - script: .ros2ci/travis.bash nightly
