--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = dynamixel_sdk
-	base = 7adf3f7
-	trimbase = 
+	base = fd7cc0f
+	trimbase = 7adf3f7
 	parent = upstream
 	previous = 55716db
