--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 4f44502
-	trimbase = 
+	trim = dynamixel_sdk
+	base = ea42f05
+	trimbase = 4f44502
 	parent = upstream
 	previous = 55716db
