--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ea42f05
+	base = 7bc6894
 	trimbase = 
 	parent = release/eloquent/dynamixel_sdk
-	previous = 
+	previous = ea42f05
