--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 567fa52
+	base = 935e853
 	trimbase = 
 	parent = debian/eloquent/dynamixel_sdk
-	previous = 
+	previous = 567fa52
