--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 5b211ee
-	trimbase = 
+	trim = dynamixel_sdk
+	base = 9ea9cbe
+	trimbase = 5b211ee
 	parent = upstream
 	previous = 55716db
