--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9ea9cbe
+	base = a12d0a3
 	trimbase = 
 	parent = release/foxy/dynamixel_sdk
-	previous = 
+	previous = 9ea9cbe
