--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = bf80a08
+	base = f5beedd
 	trimbase = 
 	parent = debian/foxy/dynamixel_sdk
-	previous = 
+	previous = bf80a08
