--- a/dynamixel_sdk_custom_interfaces/package.xml
+++ b/dynamixel_sdk_custom_interfaces/package.xml
@@ -1,22 +1,22 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>dynamixel_sdk</name>
+  <name>dynamixel_sdk_custom_interfaces</name>
   <version>3.7.40</version>
-  <description>
-    This package is wrapping version of ROBOTIS Dynamixel SDK for ROS 2. The ROBOTIS Dynamixel SDK, or SDK, is a software development library that provides Dynamixel control functions for packet communication. The API is designed for Dynamixel actuators and Dynamixel-based platforms.
-  </description>
+  <description>ROS2 custom interface examples using ROBOTIS DYNAMIXEL SDK</description>
+  <maintainer email="willson@robotis.com">willson</maintainer>
   <license>Apache 2.0</license>
-  <author email="pyo@robotis.com">Pyo</author>
-  <author email="thlim@robotis.com">Darby Lim</author>
-  <author email="zerom@robotis.com">Zerom</author>
-  <author>Leon</author>
+  <author email="willson@robotis.com">Will Son</author>
   <maintainer email="willson@robotis.com">Will Son</maintainer>
   <url type="website">http://wiki.ros.org/dynamixel_sdk</url>
   <url type="emanual">http://emanual.robotis.com/docs/en/software/dynamixel/dynamixel_sdk/overview/</url>
   <url type="repository">https://github.com/ROBOTIS-GIT/DynamixelSDK</url>
   <url type="bugtracker">https://github.com/ROBOTIS-GIT/DynamixelSDK/issues</url>
   <buildtool_depend>ament_cmake</buildtool_depend>
+  <buildtool_depend>rosidl_default_generators</buildtool_depend>
+  <exec_depend>builtin_interfaces</exec_depend>
+  <exec_depend>rosidl_default_runtime</exec_depend>
+  <member_of_group>rosidl_interface_packages</member_of_group>
   <export>
     <build_type>ament_cmake</build_type>
   </export>
