--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 27a9114
-	base = aa0eb05
-	trim = 
-	trimbase = 
+	base = 0082d4d
+	trim = dynamixel_sdk_custom_interfaces
+	trimbase = aa0eb05
