--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 27a9114
-	base = 7526856
-	trim = 
-	trimbase = 
+	base = f83d1f4
+	trim = dynamixel_sdk_examples
+	trimbase = 7526856
