--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = dynamixel_sdk
-	base = 9d24766
-	trimbase = 
+	base = 2ce1bc8
+	trimbase = 9d24766
 	parent = upstream
 	previous = 27a9114
