--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/dashing/dynamixel_sdk_examples
-	previous = 
-	base = f83d1f4
+	previous = f83d1f4
+	base = 0d4d6bb
 	trim = 
 	trimbase = 
