--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/dashing/dynamixel_sdk_examples
-	previous = 
-	base = 204258a
+	previous = 204258a
+	base = 50b9b5b
 	trim = 
 	trimbase = 
