--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/dashing/dynamixel_sdk_custom_interfaces
-	previous = 
-	base = 0082d4d
+	previous = 0082d4d
+	base = 9ad06ef
 	trim = 
 	trimbase = 
