--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/dashing/dynamixel_sdk_custom_interfaces
-	previous = 
-	base = df14f8e
+	previous = df14f8e
+	base = 69a5bc4
 	trim = 
 	trimbase = 
