--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 27a9114
-	base = c0cb60f
+	base = f09e058
 	trim = dynamixel_sdk_custom_interfaces
-	trimbase = 
+	trimbase = c0cb60f
