--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 27a9114
-	base = 4b8fee7
+	base = 31de839
 	trim = dynamixel_sdk_examples
-	trimbase = 
+	trimbase = 4b8fee7
