--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = dynamixel_sdk
-	base = 22d8ecf
-	trimbase = 
+	base = fb806e1
+	trimbase = 22d8ecf
 	parent = upstream
 	previous = 27a9114
