--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 27a9114
-	base = 6ada1c2
+	base = 4d0742a
 	trim = dynamixel_sdk_custom_interfaces
-	trimbase = 
+	trimbase = 6ada1c2
