--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 27a9114
-	base = d2664a1
+	base = ed9dcfd
 	trim = dynamixel_sdk_examples
-	trimbase = 
+	trimbase = d2664a1
