--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = dynamixel_sdk
-	base = 963191f
-	trimbase = 
+	base = fde2eeb
+	trimbase = 963191f
 	parent = upstream
 	previous = 27a9114
