--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 27a9114
-	base = b8024dc
+	base = cc99331
 	trim = dynamixel_sdk_custom_interfaces
-	trimbase = 
+	trimbase = b8024dc
