--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 27a9114
-	base = 7c1b83e
+	base = 7f17010
 	trim = dynamixel_sdk_examples
-	trimbase = 
+	trimbase = 7c1b83e
