--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = dynamixel_sdk
-	base = 6ae8b36
-	trimbase = 
+	base = fc0ef42
+	trimbase = 6ae8b36
 	parent = upstream
 	previous = 27a9114
