--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 27a9114
-	base = 1cace89
+	base = 3493db2
 	trim = dynamixel_sdk_custom_interfaces
-	trimbase = 
+	trimbase = 1cace89
