--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 27a9114
-	base = 6e97c2a
+	base = f11bd83
 	trim = dynamixel_sdk_examples
-	trimbase = 
+	trimbase = 6e97c2a
