--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = dynamixel_sdk
-	base = 59186c2
-	trimbase = 
+	base = 6f2fc03
+	trimbase = 59186c2
 	parent = upstream
 	previous = 27a9114
