--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 27a9114
-	base = 8f82c49
+	base = 8d3d9df
 	trim = dynamixel_sdk_custom_interfaces
-	trimbase = 
+	trimbase = 8f82c49
