--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 27a9114
-	base = c5e3ce5
+	base = 2f03533
 	trim = dynamixel_sdk_examples
-	trimbase = 
+	trimbase = c5e3ce5
