--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 27a9114
-	base = 534ccb4
+	base = 1d78bdf
 	trim = dynamixel_sdk_custom_interfaces
-	trimbase = 
+	trimbase = 534ccb4
