--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 27a9114
-	base = e16262a
+	base = 8339bab
 	trim = dynamixel_sdk_examples
-	trimbase = 
+	trimbase = e16262a
