--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = dynamixel_sdk
-	base = 99b5d74
-	trimbase = 
+	base = d5e131d
+	trimbase = 99b5d74
 	parent = upstream
 	previous = 27a9114
