--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 9cd8d27
-	base = 2b5e5bd
+	base = 723fb25
 	trim = dynamixel_sdk_custom_interfaces
-	trimbase = 
+	trimbase = 2b5e5bd
