--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 9cd8d27
-	base = 5619f1b
+	base = f437ecc
 	trim = dynamixel_sdk_examples
-	trimbase = 
+	trimbase = 5619f1b
