--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = dynamixel_sdk
-	base = 7f83e08
-	trimbase = 
+	base = 6ca67b9
+	trimbase = 7f83e08
 	parent = upstream
 	previous = 9cd8d27
