--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 9cd8d27
-	base = 004a408
+	base = a71cfda
 	trim = dynamixel_sdk_custom_interfaces
-	trimbase = 
+	trimbase = 004a408
