--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 9cd8d27
-	base = fee1fdc
+	base = 04a132c
 	trim = dynamixel_sdk_examples
-	trimbase = 
+	trimbase = fee1fdc
