--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = dynamixel_sdk
-	base = bb46f4c
-	trimbase = 
+	base = c3741b4
+	trimbase = bb46f4c
 	parent = upstream
 	previous = 9cd8d27
