--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 9cd8d27
-	base = 8e9fec4
+	base = 35c3c41
 	trim = dynamixel_sdk_custom_interfaces
-	trimbase = 
+	trimbase = 8e9fec4
