--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 9cd8d27
-	base = d577a72
+	base = d43d2d9
 	trim = dynamixel_sdk_examples
-	trimbase = 
+	trimbase = d577a72
