--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = dynamixel_sdk
-	base = 25d7489
-	trimbase = 
+	base = 11347be
+	trimbase = 25d7489
 	parent = upstream
 	previous = 9cd8d27
