--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 9cd8d27
-	base = 4faa0a6
-	trim = 
-	trimbase = 
+	base = 3905b9f
+	trim = dynamixel_sdk_custom_interfaces
+	trimbase = 4faa0a6
