--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 9cd8d27
-	base = bc72d86
-	trim = 
-	trimbase = 
+	base = 19db689
+	trim = dynamixel_sdk_examples
+	trimbase = bc72d86
