--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = dynamixel_sdk
-	base = 6ca73f5
-	trimbase = 
+	base = 523abe8
+	trimbase = 6ca73f5
 	parent = upstream
 	previous = 9cd8d27
