--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/foxy/dynamixel_sdk_custom_interfaces
-	previous = 
-	base = a9d2b63
+	previous = a9d2b63
+	base = 5c44cf3
 	trim = 
 	trimbase = 
