--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/foxy/dynamixel_sdk_custom_interfaces
-	previous = 
-	base = 3905b9f
+	previous = 3905b9f
+	base = 83ebeac
 	trim = 
 	trimbase = 
