--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/foxy/dynamixel_sdk_examples
-	previous = 
-	base = 19db689
+	previous = 19db689
+	base = c13e699
 	trim = 
 	trimbase = 
