--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/foxy/dynamixel_sdk_examples
-	previous = 
-	base = 653f1e8
+	previous = 653f1e8
+	base = 44d7996
 	trim = 
 	trimbase = 
