--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 9cd8d27
-	base = 48d8a38
+	base = f7d8e6b
 	trim = dynamixel_sdk_custom_interfaces
-	trimbase = 
+	trimbase = 48d8a38
