--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 9cd8d27
-	base = 8a7f899
+	base = 034c227
 	trim = dynamixel_sdk_examples
-	trimbase = 
+	trimbase = 8a7f899
