--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 9cd8d27
-	base = ebb93f8
+	base = 7ee05bc
 	trim = dynamixel_sdk_custom_interfaces
-	trimbase = 
+	trimbase = ebb93f8
