--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 9cd8d27
-	base = 43e644b
+	base = ea2cacf
 	trim = dynamixel_sdk_examples
-	trimbase = 
+	trimbase = 43e644b
