--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = dynamixel_sdk
-	base = 14a5e9f
-	trimbase = 
+	base = 9439228
+	trimbase = 14a5e9f
 	parent = upstream
 	previous = 9cd8d27
