--- a/.github/workflows/ros-ci.yml
+++ b/.github/workflows/ros-ci.yml
@@ -3,9 +3,9 @@ name: ros2-ci
 # Controls when the action will run. Triggers the workflow on push or pull request
 on:
   push:
-    branches: [ ros2, ros2-devel ]
+    branches: [ ros2, ros2-devel, foxy, galactic ]
   pull_request:
-    branches: [ ros2, ros2-devel ]
+    branches: [ ros2, ros2-devel, foxy, galactic ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -15,23 +15,23 @@ jobs:
       fail-fast: false
       matrix:
         ros_distribution:
-          - dashing
+          # - dashing
           - foxy
-          # - galactic
+          - galactic
           - rolling
         include:
             # Dashing Diademata (May 2019 - May 2021)
-          - docker_image: ubuntu:bionic
-            ros_distribution: dashing
-            ros_version: 2
+          # - docker_image: ubuntu:bionic
+          #   ros_distribution: dashing
+          #   ros_version: 2
             # Foxy Fitzroy (June 2020 - May 2023)
           - docker_image: ubuntu:focal
             ros_distribution: foxy
             ros_version: 2
             # Galactic Geochelone (May 2021)
-          # - docker_image: ubuntu:focal
-          #   ros_distribution: galactic
-          #   ros_version: 2
+          - docker_image: ubuntu:focal
+            ros_distribution: galactic
+            ros_version: 2
             # Rolling
           - docker_image: ubuntu:focal
             ros_distribution: rolling
@@ -46,7 +46,7 @@ jobs:
         with:
           path: ros_ws/src
       - name: Setup ROS environment
-        uses: ros-tooling/setup-ros@0.1.2
+        uses: ros-tooling/setup-ros@0.2.1
         with:
           required-ros-distributions: ${{ matrix.ros_distribution }}
       - name: Build and Test
