--- a/dynamixel_sdk_custom_interfaces/package.xml
+++ b/dynamixel_sdk_custom_interfaces/package.xml
@@ -14,6 +14,7 @@
   <url type="bugtracker">https://github.com/ROBOTIS-GIT/DynamixelSDK/issues</url>
   <buildtool_depend>ament_cmake</buildtool_depend>
   <buildtool_depend>rosidl_default_generators</buildtool_depend>
+  <build_depend>builtin_interfaces</build_depend>
   <exec_depend>builtin_interfaces</exec_depend>
   <exec_depend>rosidl_default_runtime</exec_depend>
   <member_of_group>rosidl_interface_packages</member_of_group>
