--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 9796ddf
-	base = 9a17ed5
+	base = b8fd71f
 	trim = dynamixel_sdk_custom_interfaces
-	trimbase = 
+	trimbase = 9a17ed5
