--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 9796ddf
-	base = 6e98c29
+	base = 9c387df
 	trim = dynamixel_sdk_examples
-	trimbase = 
+	trimbase = 6e98c29
