--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = dynamixel_sdk
-	base = 69a306a
-	trimbase = 
+	base = c614fbe
+	trimbase = 69a306a
 	parent = upstream
 	previous = 9796ddf
