--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 9796ddf
-	base = 82e14a1
-	trim = 
-	trimbase = 
+	base = 7c594b7
+	trim = dynamixel_sdk_custom_interfaces
+	trimbase = 82e14a1
