--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 9796ddf
-	base = 0385fdb
-	trim = 
-	trimbase = 
+	base = 6cd5a6f
+	trim = dynamixel_sdk_examples
+	trimbase = 0385fdb
