--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 9796ddf
-	base = 3b9cd4e
-	trim = 
-	trimbase = 
+	base = 7862d55
+	trim = dynamixel_sdk
+	trimbase = 3b9cd4e
