--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/galactic/dynamixel_sdk_custom_interfaces
-	previous = 
-	base = 03c317d
+	previous = 03c317d
+	base = 8f8ad56
 	trim = 
 	trimbase = 
