--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/galactic/dynamixel_sdk_examples
-	previous = 
-	base = 6cd5a6f
+	previous = 6cd5a6f
+	base = 754e9c5
 	trim = 
 	trimbase = 
