--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/galactic/dynamixel_sdk_examples
-	previous = 
-	base = 6f70cea
+	previous = 6f70cea
+	base = 8b8900f
 	trim = 
 	trimbase = 
