--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/galactic/dynamixel_sdk
-	previous = 
-	base = 7862d55
+	previous = 7862d55
+	base = 813279b
 	trim = 
 	trimbase = 
