--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/galactic/dynamixel_sdk
-	previous = 
-	base = 4ca0881
+	previous = 4ca0881
+	base = 8f5db30
 	trim = 
 	trimbase = 
