--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/galactic/dynamixel_sdk_custom_interfaces
-	previous = 
-	base = 7c594b7
+	previous = 7c594b7
+	base = f9a0268
 	trim = 
 	trimbase = 
