--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/galactic/dynamixel_sdk_custom_interfaces
-	previous = 
-	base = 9780e05
+	previous = 9780e05
+	base = b8f8ae5
 	trim = 
 	trimbase = 
