--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/galactic/dynamixel_sdk
-	previous = 
-	base = 93b9c34
+	previous = 93b9c34
+	base = f55b12f
 	trim = 
 	trimbase = 
