--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/galactic/dynamixel_sdk_examples
-	previous = 
-	base = c71367f
+	previous = c71367f
+	base = 442c6e8
 	trim = 
 	trimbase = 
