--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 9796ddf
-	base = eea1c6e
-	trim = 
-	trimbase = 
+	base = 27d0383
+	trim = dynamixel_sdk_custom_interfaces
+	trimbase = eea1c6e
