--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 9796ddf
-	base = b681568
-	trim = 
-	trimbase = 
+	base = 37581b0
+	trim = dynamixel_sdk_examples
+	trimbase = b681568
