--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 9796ddf
-	base = 70505de
-	trim = 
-	trimbase = 
+	base = f00bab8
+	trim = dynamixel_sdk
+	trimbase = 70505de
