--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/dynamixel_sdk_examples
-	previous = 
-	base = 37581b0
+	previous = 37581b0
+	base = b1238d6
 	trim = 
 	trimbase = 
