--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/dynamixel_sdk_examples
-	previous = 
-	base = a3919e0
+	previous = a3919e0
+	base = 52afa04
 	trim = 
 	trimbase = 
