--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/dynamixel_sdk
-	previous = 
-	base = 23ddcec
+	previous = 23ddcec
+	base = 53a8d64
 	trim = 
 	trimbase = 
