--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/dynamixel_sdk_custom_interfaces
-	previous = 
-	base = 27d0383
+	previous = 27d0383
+	base = cd9993c
 	trim = 
 	trimbase = 
