--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/dynamixel_sdk_custom_interfaces
-	previous = 
-	base = 4cddbb8
+	previous = 4cddbb8
+	base = 17d8f61
 	trim = 
 	trimbase = 
