--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/dynamixel_sdk_examples
-	previous = 
-	base = 814f151
+	previous = 814f151
+	base = dcf5fa9
 	trim = 
 	trimbase = 
