--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/dynamixel_sdk_custom_interfaces
-	previous = 
-	base = e2699ee
+	previous = e2699ee
+	base = 02d2a8a
 	trim = 
 	trimbase = 
