--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/dynamixel_sdk
-	previous = 
-	base = f00bab8
+	previous = f00bab8
+	base = a9795da
 	trim = 
 	trimbase = 
