--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/dynamixel_sdk
-	previous = 
-	base = e3745fa
+	previous = e3745fa
+	base = f0d37d8
 	trim = 
 	trimbase = 
